fixes to alignemnts on cover blocks, bug fix on search block, new fonts, wp 6.4.2 fixes, block pattern updates

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -247,12 +247,12 @@ body .editor-styles-wrapper,
 .editor-styles-wrapper .wp-block-file,
 .editor-post-title__block .editor-post-title__input,
 .editor-styles-wrapper .wp-block-quote p,
-.editor-styles-wrapper h1,
-.editor-styles-wrapper h2,
-.editor-styles-wrapper h3,
-.editor-styles-wrapper h4,
-.editor-styles-wrapper h5,
-.editor-styles-wrapper h6,
+.editor-styles-wrapper h1.wp-block-heading,
+.editor-styles-wrapper h2.wp-block-heading,
+.editor-styles-wrapper h3.wp-block-heading,
+.editor-styles-wrapper h4.wp-block-heading,
+.editor-styles-wrapper h5.wp-block-heading,
+.editor-styles-wrapper h6.wp-block-heading,
 .wp-block-button.is-style-outline .wp-block-button__link {
     color: $gray-900;
 }
