--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -2623,6 +2623,7 @@ button.mfp-arrow {
     overflow: visible;
     cursor: pointer;
     border: 0;
+    appearance: none;
     -webkit-appearance: none;
     display: block;
     outline: none;
@@ -3588,6 +3589,7 @@ label {
 .wp-block[data-type="gravityforms/form"] .gform_wrapper.gf_browser_safari .gfield_time_ampm select {
     border-radius: 0px;
     height: 50px;
+    appearance: none;
     -webkit-appearance: none;
     background: #fff;
     padding-left: 14px;
